# vekta_embeddings

./: Cargo.toml  README.md
src/: image_embed.rs  rerank.rs  text_embed.rs  utils.rs
