[package]
name = "vekta_embeddings"
version = "0.1.0"
edition = "2021"
authors = ["rahulunair <rahulunair@gmail.com>"]
description = "A set of Unix-style tools for text and image embedding and reranking"

[[bin]]
name = "vte"
path = "src/text_embed.rs"

[[bin]]
name = "vie"
path = "src/image_embed.rs"

[[bin]]
name = "vre"
path = "src/rerank.rs"

[dependencies]
anyhow = "1.0"
fastembed = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
image = "0.24.6"
